Add ErrorProne and NullAway